# hsreduce

./: .gitignore  .hsreduce_statistics.csv  Bug.hs.stale_state  CHANGELOG.md  LICENSE  README.md  TODO.md  Temp.hs  creduce_test_invocations.txt  default.nix  hie.yaml  hsreduce.cabal  hsreduce.dhall  hsreduce.org  nixpkgs-version.json  shell.nix
.github/workflows/: haskell.yml
src/: Glue.hs  HsAllInOne.hs  HsReduce.hs  Main.hs  Reduce.hs  ReduceParser.hs  Stubbing.hs  Types.hs  Util.hs
src/Merge/: HsAllInOne.hs  Main.hs  Merge.hs
src/Parser/: Parser.hs
src/Passes/: RemoveUnused.hs  Stubbing.hs
src/Passes/RemoveUnused/: Decls.hs  Exports.hs  Imports.hs  Pragmas.hs
src/Reduce/: Driver.hs  HsAllInOne.hs  HsReduce.hs  Main.hs  Passes.hs  Reduce.hs  Types.hs  Util.hs
src/Reduce/Passes/: Cabal.hs  DataTypes.hs  Decls.hs  Exports.hs  Expr.hs  Functions.hs  Imports.hs  Names.hs  Parameters.hs  Pat.hs  Pragmas.hs  Stubbing.hs  TemplateHaskell.hs  TypeFamilies.hs  Typeclasses.hs  Types.hs
src/Reduce/Passes/Extensions/: TypeFamilies.hs
src/Reduce/Passes/Remove/: Decls.hs  Exports.hs  Imports.hs  Parameters.hs  Pragmas.hs
src/Reduce/Passes/RemoveUnused/: Decls.hs  Exports.hs  Imports.hs  Parameters.hs  Pragmas.hs
src/Reduce/Passes/Simplify/: Decls.hs  Expr.hs  Pat.hs  Types.hs
src/Util/: Evaluation.hs  Parser.hs  Types.hs  Util.hs
test/: Test.hs
test-cases/: Foo.hs  Main.hs
test-cases/regressions/: ConArgs.hs  Cons.hs  Contexts.hs  Decls.hs  Deriving.hs  EtaReduceMatches.hs  Exports.hs  Exports2.hs  Expr.hs  FunIds.hs  Functions.hs  Guards.hs  Imports.hs  InlineTypes.hs  LocalBinds.hs  Matches.hs  MultiParams.hs  Params.hs  Pragmas.hs  RHSs.hs  RecCon2Prefix.hs  SplitSigs.hs  TemplateHaskell.hs  TemplateHaskell2.hs  TemplateHaskellUtil.hs  TyVarBndr.hs  TypeFamilies  TypeFamilies.hs  TypeFamilies2.hs  TypeFamilies3  TypeFamilies3.hs  TypeFamilies_apply.hs  Typeclasses.hs  Unit.hs  expr.sh  functions.sh  funids.sh  interesting.sh  multiparams.sh  params.sh  (+4 more)
test-cases/ticket14040/: ghc802.nix  ghc822.nix  interesting.sh
test-cases/ticket14040_1/: interesting.sh
test-cases/ticket14040_2/: Bug.hs  Bug_creduce.hs  Bug_minimal.hs  Ticket14040.hs  Ticket14040_2.hs  interesting.sh
test-cases/ticket14270/: Bug_creduce.hs  Bug_minimal.hs  Ticket14270.hs  Ticket14270.sh  Ticket14270_minimal.hs  ghc822.nix  interesting.sh
test-cases/ticket14779/: Bug.hs  Bug_creduce.hs  Ticket14779.hs  ghc841.nix  interesting.sh  shell.nix
test-cases/ticket14827/: Bug.hs  Ticket14827.hs  interesting.sh
test-cases/ticket15164/: Ticket15164.hs
test-cases/ticket15176/: Ticket15176.hs
test-cases/ticket15696/: Ticket15696  ghc843.nix  interesting.sh
test-cases/ticket15696_1/: Ticket15696_1.hs  Ticket15696_1_minimal.hs  ghc843.nix  interesting.sh
test-cases/ticket15696_2/: Bug_minimal.hs  Ticket15696_2  Ticket15696_2_creduce.hs  ghc861.nix  interesting.sh
test-cases/ticket15753/: Bug_creduce.hs  Ticket15753.hs  Ticket15753_minimal.hs  ghc861.nix  interesting.sh
test-cases/ticket16979/: Bug.hs  Bug_creduce.hs  Bug_minimal.hs  Bug_v2.hs  Ticket14270_minimal.hs  Ticket16979.hs  Ticket16979_creduce.hs  ghc822.nix  interesting.sh
test-cases/ticket8763/: Bench.hs  Ticket8763.hs  interesting.sh
test-cases/trying-out/: .Trying-out.rhs.swp  Bug.hs  Constructors.hs  Constructors.hs.stale_state  Inline.hs  Inline.hs.stale_state  Params  Params.hs  Params.hs.stale_state  Params_hsreduce  Ticket18098.hs  Trying-out  Trying-out-matches.hs  Trying-out.hs  interesting.sh
