cabal-version:       2.4
name:                hsreduce
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
build-type:          Simple
extra-source-files:  CHANGELOG.md

common dry
    hs-source-dirs:
        src
    build-depends:       
        base
        , Cabal
        , MonadRandom
        , aeson
        , bytestring
        , cassava
        , containers
        , edit-distance
        , ghc
        , ghc-boot-th
        , ghc-exactprint
        , ghc-paths
        , hashable
        , hie-bios
        , katip
        , lifted-async
        , Diff
        , lifted-base
        , megaparsec
        , microlens-platform
        , monad-control
        , mtl
        , optparse-generic
        , path
        , path-io
        , process
        , regex
        , split
        , stm-lifted
        , syb
        , text
        , time
        , uniplate
        , word8
        , transformers-base
    default-extensions:
        DataKinds
        DeriveGeneric
        FlexibleContexts
        FlexibleInstances
        FlexibleInstances         
        GeneralizedNewtypeDeriving
        GeneralizedNewtypeDeriving 
        LambdaCase
        MultiParamTypeClasses
        MultiParamTypeClasses     
        OverloadedStrings 
        OverloadedStrings         
        PatternSynonyms
        QuasiQuotes
        Rank2Types  
        RecordWildCards
        ScopedTypeVariables
        TemplateHaskell
        TemplateHaskell           
        TupleSections
        TypeFamilies
        TypeFamilies              
        TypeOperators
        UndecidableInstances      
        ViewPatterns
    default-language:    
        Haskell2010
    ghc-options:       
        -Wall

executable hsreduce
    import:
        dry
    main-is: 
        Main.hs
    build-depends:       
        lib-hsreduce
    ghc-options:       
        -Wall 
        -threaded 
        -rtsopts
        -with-rtsopts=-T
        -Wno-missing-methods
        -Wno-orphans

library lib-hsreduce
    import:
        dry
    exposed-modules:   
        Merge.HsAllInOne
        Reduce.Driver
        Reduce.Passes
        Reduce.Passes.Simplify.Expr
        Reduce.Passes.Simplify.Types
        Reduce.Passes.Simplify.Pat
        Reduce.Passes.Simplify.Decls
        Reduce.Passes.Extensions.TypeFamilies
        Reduce.Passes.Stubbing
        Reduce.Passes.DataTypes
        Reduce.Passes.Names
        Reduce.Passes.Functions
        Reduce.Passes.Remove.Decls
        Reduce.Passes.Remove.Imports
        Reduce.Passes.Remove.Exports
        Reduce.Passes.Remove.Pragmas
        Reduce.Passes.Remove.Parameters
        Util.Util
        Util.Types
    other-modules:
        Parser.Parser

test-suite test-hsreduce
    import: 
        dry
    type: 
        exitcode-stdio-1.0
    main-is: 
        Test.hs
    hs-source-dirs: 
        test
    build-depends: 
        lib-hsreduce
        , hspec