cabal-version:       2.4
name:                hsreduce
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
build-type:          Simple
extra-source-files:  CHANGELOG.md

common dry
    hs-source-dirs:
        src
    build-depends:       
        base
        , HUnit
        , Cabal
        , MonadRandom
        , aeson
        , bytestring
        , cassava
        , unordered-containers
        , containers
        , edit-distance
        , ghc
        , ghc-boot-th
        , ghc-exactprint
        , ghc-paths
        , hashable
        , hie-bios
        , katip
        , lifted-async
        , Diff
        , lifted-base
        , megaparsec
        , microlens-platform
        , monad-control
        , mtl
        , optparse-generic
        , path
        , path-io
        , process
        , regex
        , split
        , stm-lifted
        , syb
        , text
        , time
        , uniplate
        , word8
        , transformers-base
    default-extensions:
        DataKinds
        DeriveGeneric
        FlexibleContexts
        FlexibleInstances
        FlexibleInstances         
        GeneralizedNewtypeDeriving
        GeneralizedNewtypeDeriving 
        LambdaCase
        MultiParamTypeClasses
        MultiParamTypeClasses     
        OverloadedStrings 
        OverloadedStrings         
        PatternSynonyms
        QuasiQuotes
        Rank2Types  
        RecordWildCards
        ScopedTypeVariables
        TemplateHaskell
        TemplateHaskell           
        TupleSections
        TypeFamilies
        TypeFamilies              
        TypeOperators
        UndecidableInstances      
        ViewPatterns
    default-language:    
        Haskell2010
    ghc-options:       
        -Wall

executable hsreduce
    import:
        dry
    main-is: 
        Main.hs
    build-depends:       
        lib-hsreduce
    ghc-options:       
        -Wall 
        -threaded 
        -rtsopts
        -with-rtsopts=-T
        -Wno-missing-methods
        -Wno-orphans

library lib-hsreduce
    import:
        dry
    exposed-modules:   
        Merge.HsAllInOne
        Reduce.Driver
        Reduce.Passes
        Reduce.Passes.Expr
        Reduce.Passes.Types
        Reduce.Passes.Pat
        Reduce.Passes.Decls
        Reduce.Passes.TypeFamilies
        Reduce.Passes.Stubbing
        Reduce.Passes.DataTypes
        Reduce.Passes.Typeclasses
        Reduce.Passes.Names
        Reduce.Passes.Functions
        Reduce.Passes.Imports
        Reduce.Passes.Exports
        Reduce.Passes.Pragmas
        Reduce.Passes.Parameters
        Util.Util
        Util.Types
    other-modules:
        Parser.Parser

test-suite test-hsreduce
    import: 
        dry
    type: 
        exitcode-stdio-1.0
    main-is: 
        Test.hs
    hs-source-dirs: 
        test
    build-depends: 
        lib-hsreduce
        , hspec